@@ -13,33 +13,112 @@ compileJava {
 
 compileTestJava {
     options.fork = true
-    options.forkOptions.executable = 'javac'
     options.compilerArgs << "-XDignore.symbol.file"
 }
+
+def testProjects = [
+        'build/output/test/antlr',
+        'build/output/test/codeforces',
+        'build/output/test/fastjson-1.2.50',
+        'build/output/test/fescar',
+        'build/output/test/guava',
+        'build/output/test/guava-26.0',
+        'build/output/test/guava-30.0',
+        'build/output/test/pdfbox',
+        'build/output/test/seata',
+        'build/output/test/seata-core-0.5.0',
+        'build/output/test/spoon',
+        'build/output/test/spoon-core-7.0.0',
+]
 
 sourceSets {
     test {
         java {
-            srcDir('build/output/test/antlr')
-            srcDir('build/output/test/custom')
-            srcDir('build/output/test/guava')
-            srcDir('build/output/test/fescar')
-            srcDir('build/output/test/pdfbox')
-            srcDir('build/output/test/seata')
-            srcDir('build/output/test/spoon')
-            srcDir('build/output/test/samples')
-            srcDir('build/output/test/utbottest')
+            testProjects.forEach {
+                srcDir(it)
+            }
         }
     }
 }
 
 test {
     useJUnit()
+    jvmArgs =[
+            "--add-opens", "java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util.concurrent.locks=ALL-UNNAMED",
+            "--add-opens", "java.base/java.text=ALL-UNNAMED",
+            "--add-opens", "java.base/java.time=ALL-UNNAMED",
+            "--add-opens", "java.base/java.io=ALL-UNNAMED",
+            "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+            "--add-opens", "java.base/java.nio.file=ALL-UNNAMED",
+            "--add-opens", "java.base/java.net=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.security.util=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.reflect.generics.repository=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.net.util=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.net.fs=ALL-UNNAMED",
+            "--add-opens", "java.base/java.security=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang.ref=ALL-UNNAMED",
+            "--add-opens", "java.base/java.math=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util.stream=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.security.provider=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.event=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.jimage=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.jimage.decompressor=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.jmod=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.jtrfs=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.loader=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.logger=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.math=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.module=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.org.objectweb.asm.commons=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.org.objectweb.asm.signature=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.org.objectweb.asm.tree.analysis=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.org.objectweb.asm.util=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.org.xml.sax=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.org.xml.sax.helpers=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.perf=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.platform=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.ref=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.reflect=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.util=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.util.jar=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.util.xml=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.util.xml.impl=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.vm=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.vm.annotation=ALL-UNNAMED"
+    ]
     finalizedBy jacocoTestReport
 }
 
 jacocoTestReport {
+    afterEvaluate {
+        def r = testProjects.collect {
+            fileTree(dir: it)
+        }.findAll {
+            it.dir.exists()
+        }
+        sourceDirectories.setFrom(r.collect {files(it) })
+        classDirectories.setFrom(
+                r.collect {
+                    fileTree(dir: it.dir.toPath().parent.resolveSibling("unzipped").resolve(it.dir.name))
+                }.findAll {
+                    it.dir.exists()
+                }.collect {
+                    files(it)
+                }
+        )
+    }
+
     reports {
+        csv.enabled = true
         html.enabled = true
     }
 }
